# oc_graphenricher

./: .gitignore  .releaserc.json  CHANGELOG.md  CITATION.cff  GraphEnricher_cache.sqlite  LICENSE  README.md  REUSE.toml  conftest.py  example_deduplication.py  example_enricher.py  example_instancematching.py  pyproject.toml  requirements.txt  scripts.py  watch_book.sh
.github/workflows/: docs.yml  pyright.yml  release.yml  reuse.yml  ruff.yml  software-citation.yml  test.yml
docs/: .gitignore  _config.yml  _toc.yml  api-guide.md  installing.md  intro.md  make.bat  usage.md
docs/source/: conf.py  index.rst  installing.rst  intro.rst  tutorial.rst
docs/source/modules/: modules.rst  oc_graphenricher.APIs.rst  oc_graphenricher.enricher.rst  oc_graphenricher.instancematching.rst  oc_graphenricher.rst
oc_graphenricher/: _scripts.py
oc_graphenricher/APIs/: __init__.py  test_queryinterface.py
oc_graphenricher/enricher/: __init__.py
oc_graphenricher/instancematching/: __init__.py  generate_test_graphset.py  test_instancematching.py  test_merge_br.rdf
src/oc_graphenricher/: __init__.py  _identifiers.py  _storage.py  deduplication.py  storage.py
src/oc_graphenricher/APIs/: __init__.py
src/oc_graphenricher/enricher/: __init__.py
src/oc_graphenricher/instancematching/: __init__.py
tests/: conftest.py  helpers.py  test_storage.py
tests/apis/: test_queryinterface.py
tests/deduplication/: test_deduplication.py
tests/enricher/: test_enricher.py
tests/fixtures/: __init__.py  generate_test_graphset.py  test_merge_br.rdf
tests/fixtures/api_responses/: queryinterface.json
tests/instancematching/: test_instancematching.py
