[tool.poetry]
name = "oc-graphenricher"
version = "0.2.5"
description = "A tool to enrich any OCDM compliant Knowledge Graph, finding new identifiers and deduplicating entities"
authors = ["Gabriele Pisciotta <ga.pisciotta@gmail.com>", "Arcangelo Massari <arcangelo.massari@unibo.it>", "Davide Brembilla <davide.brembilla@studio.unibo.it>" ,"Elia Rizzetto <elia.rizzetto@studio.unibo.it", "Arianna Moretti <arianna.moretti4@unibo.it"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = ">=4.67.1"
requests = ">=2.26"
networkx = "2.5"
oc-ocdm = ">=11.0.14"
python-levenshtein = ">=0.27"
requests-cache = ">=0.6.0"
rdflib = ">=7.4.0"
levenshtein = ">=0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'scripts:test'
