[project]
name = "oc-graphenricher"
version = "2.1.0"
description = "A tool to enrich any OCDM compliant Knowledge Graph, finding new identifiers and deduplicating entities"
authors = [
    { name = "Gabriele Pisciotta", email = "ga.pisciotta@gmail.com" },
    { name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it" },
    { name = "Elia Rizzetto", email = "elia.rizzetto@studio.unibo.it" },
    { name = "Arianna Moretti", email = "arianna.moretti4@unibo.it" },
    { name = "Ilaria De Dominicis", email = "ilaria.dedominicis2@studio.unibo.it" },
    { name = "Silvio Peroni", email = "silvio.peroni@unibo.it" },
    { name = "Simone Persiani" },
    { name = "Davide Brembilla", email = "davide.brembilla@studio.unibo.it" },
]
license = "ISC"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "tqdm>=4.68.3",
    "requests>=2.34.2",
    "networkx>=3.4.2",
    "oc-ocdm>=11.0.17",
    "requests-cache>=1.3.2",
    "rdflib>=7.6.0",
    "levenshtein>=0.27.3",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["oc_graphenricher"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",     # pydocstyle missing docstring rules.
    "D211",   # pydocstyle no blank line before class.
    "D212",   # pydocstyle summary on first line in multiline docstring.
    "PLR0913", # Pylint too many arguments in function definition.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # flake8-bandit assert usage.
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "genbadge[coverage]>=1.1.3",
    "jupyter-book~=1.0.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "reuse>=6.2.0",
    "ruff>=0.15.19",
    "watchdog[watchmedo]>=6.0.0",
]
